Hooks personnalisé likes + followers

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 responsive
-profil.jsx
+Sécurité base de données
 theme jour/nuit
 langage français/anglais
 animations
@@ -7,9 +7,6 @@ spinners vaidation formulaire
 emoji mart
 Connexion google    
 reinitialisation mot de passe
-onclick sur pseudo des commentaire poru afficher profil
-images dans waveContext
-photo de profilphoto de profil dans waves et réposne
+photo de profil dans waves et réposne
 Messagerie instantanée
-Recherche d'ami
 Abonnés
